# Aleatoric

./: .clang-format  CMakeLists.txt  README.md
AleatoricCompositionTools.xcodeproj/: project.pbxproj
AleatoricCompositionTools.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AleatoricCompositionTools.xcodeproj/project.xcworkspace/xcuserdata/simonpratt.xcuserdatad/: UserInterfaceState.xcuserstate
AleatoricCompositionTools.xcodeproj/xcuserdata/simonpratt.xcuserdatad/xcschemes/: AleatoricCompositionTools.xcscheme  TestACT.xcscheme  xcschememanagement.plist
TestACT/: main.cpp
cmake/: AleatoricHelpers.cmake
dependencies/: CMakeLists.txt
docs/: CMakeLists.txt  general.md
include/actlib/: AdjacentSteps.hpp  Basic.hpp  Cycle.hpp  DiscreteGenerator.hpp  DurationProtocol.hpp  Geometric.hpp  GranularWalk.hpp  GroupedRepetition.hpp  IDiscreteGenerator.hpp  IUniformGenerator.hpp  Multiples.hpp  NoRepetition.hpp  NumberGenerators.hpp  Numbers.hpp  Periodic.hpp  Precision.hpp  Prescribed.hpp  Producer.hpp  ProducerCollections.hpp  ProducerGranular.hpp  ProducerSteps.hpp  ProducerTimeDomain.hpp  Protocol.hpp  ProtocolGranular.hpp  ProtocolInterface.hpp  ProtocolSteps.hpp  Range.hpp  Ratio.hpp  Serial.hpp  Subset.hpp  UniformGenerator.hpp  Walk.hpp  helloWorld.hpp
include/aleatoric/: AdjacentSteps.hpp  Basic.hpp  CollectionsProducer.hpp  Cycle.hpp  DiscreteGenerator.hpp  DurationProtocol.hpp  DurationsProducer.hpp  GranularWalk.hpp  GroupedRepetition.hpp  IDiscreteGenerator.hpp  IUniformGenerator.hpp  IUniformRealGenerator.hpp  Multiples.hpp  NoRepetition.hpp  NumberProtocol.hpp  NumberProtocolFactory.hpp  NumbersProducer.hpp  Periodic.hpp  Precision.hpp  Prescribed.hpp  Range.hpp  Ratio.hpp  Serial.hpp  Subset.hpp  UniformGenerator.hpp  UniformRealGenerator.hpp  Walk.hpp
oldNumberGenerators/: OldNumberGenerators.cpp  OldNumberGenerators.h  nameChanges.txt
packaging/: CMakeLists.txt
scripts/: build-library-debug.sh  build-tests.sh
source/: CMakeLists.txt  NumberGenerators.cpp  Range.cpp
source/DurationProtocols/: CMakeLists.txt  DurationProtocol.cpp  DurationProtocol.hpp  Geometric.cpp  Geometric.hpp  Multiples.cpp  Multiples.hpp  Prescribed.cpp  Prescribed.hpp
source/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
source/Errors/: CMakeLists.txt  ErrorChecker.cpp  ErrorChecker.hpp
source/Generators/: CMakeLists.txt  DiscreteGenerator.cpp  DiscreteGenerator.hpp  Engine.cpp  IDiscreteGenerator.hpp  UniformGenerator.cpp  UniformRealGenerator.cpp
source/NumberHelpers/: CMakeLists.txt  CycleStates.cpp  CycleStates.hpp  SeriesPrinciple.hpp
source/NumberProtocols/: AdjacentSteps.cpp  AdjacentSteps.hpp  Basic.cpp  Basic.hpp  CMakeLists.txt  Cycle.cpp  Cycle.hpp  GranularWalk.cpp  GranularWalk.hpp  GroupedRepetition.cpp  GroupedRepetition.hpp  NoRepetition.cpp  NoRepetition.hpp  NumberProtocol.cpp  NumberProtocol.hpp  NumberProtocolFactory.cpp  NumberProtocolParameters.cpp  NumberProtocolParameters.hpp  Periodic.cpp  Periodic.hpp  Precision.cpp  Precision.hpp  Ratio.cpp  Ratio.hpp  Serial.cpp  Serial.hpp  Subset.cpp  Subset.hpp  Walk.cpp  Walk.hpp
source/NumberProtocols/Helpers/: SeriesPrinciple.cpp
source/Numbers/: AdjacentSteps.cpp  Basic.cpp  Cycle.cpp  DiscreteGenerator.cpp  DiscreteGenerator.hpp  GranularWalk.cpp  GroupedRepetition.cpp  NoRepetition.cpp  Numbers.cpp  NumbersProducer.cpp  Periodic.cpp  Precision.cpp  Producer.cpp  ProducerGranular.cpp  ProducerSteps.cpp  Range.cpp  Ratio.cpp  Serial.cpp  Subset.cpp  UniformGenerator.cpp  UniformGenerator.hpp  Walk.cpp
source/Producers/: CMakeLists.txt  CollectionsProducer.hpp  DurationsProducer.cpp  DurationsProducer.hpp  NumbersProducer.cpp  NumbersProducer.hpp
source/Range/: CMakeLists.txt
source/TimeDomain/: Geometric.cpp  Multiples.cpp  Prescribed.cpp  ProducerTimeDomain.cpp
source/Utilities/: CycleStates.cpp  CycleStates.hpp  Utilities.cpp  Utilities.hpp
src/: NumberGenerators.cpp  helloWorld.cpp
test/: NumberGenerators.mm  TestACTLib.m  helloWorld.mm
tests/: AdjacentStepsTest.cpp  BasicTest.cpp  CMakeLists.txt  CollectionsIntegrationTests.cpp  CollectionsProducerTest.cpp  CycleTest.cpp  DiscreteGeneratorTest.cpp  DurationsIntegrationTests.cpp  DurationsProducerTest.cpp  EngineTest.cpp  GeometricTest.cpp  GranularWalkTest.cpp  GroupedRepetitionTest.cpp  MultiplesTest.cpp  NoRepetitionTest.cpp  NumbersIntegrationTests.cpp  NumbersProducerTest.cpp  NumbersTest.cpp  PeriodicTest.cpp  PrecisionTest.cpp  PrescribedTest.cpp  ProducerCollectionsTest.cpp  ProducerGranularTest.cpp  ProducerStepsTest.cpp  ProducerTest.cpp  ProducerTimeDomainTest.cpp  RangeTest.cpp  RatioTest.cpp  SerialTest.cpp  SubsetTest.cpp  TimeDomainIntegrationTests.cpp  UniformGeneratorTest.cpp  UniformRealGeneratorTest.cpp  WalkTest.cpp  main.cpp
tests/Mocks/: DiscreteGeneratorMock.hpp  DurationProtocolMock.hpp  NumberProtocolMock.hpp  NumbersStepsProtocolMock.hpp  UniformGeneratorMock.hpp
uml/: NumberGenerators.yuml
